--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Page</title>
+    <title>Deep Creek</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/pesto.html">Pesto</a>
+    <h1>Welcome to the Deep Creek Planning Website</h1>
+    <a href="recipes/lasagna.html">Click to Donate to Katelyn Essey</a>
+    <a href="recipes/pesto.html">Shoestring Budget where David ends up swallowing the entire cost </a>
 </body>
 </html>
